# final-year-campus-ai

./: .gitattributes  .gitignore  biome.json  package.json  turbo.json
apps/backend/: .env.example  BUGS.md  README.md  TESTING_GUIDE.md  app.py  chainlit.md  config.py  gen-types.py  package.json  prompt.txt  pyproject.toml  requirements.txt  wsgi.py
apps/backend/.chainlit/: config.toml
apps/backend/.chainlit/translations/: ar-SA.json  bn.json  da-DK.json  de-DE.json  el-GR.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  it.json  ja.json  kn.json  ko.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json  zh-TW.json
apps/backend/app/: __init__.py  models.py  schemas.py
apps/backend/app/api/: __init__.py  auth.py  chat.py  complaint.py  decorators.py  errors.py  history.py  users.py
apps/backend/app/core/: ingest.py
apps/backend/app/core/rag/: llm.py  loader.py  retriever.py  splitter.py  vectorstore.py
apps/backend/app/services/: chainlit_demo.py  demo.py  logger.py  mailer.py
apps/backend/chroma_db/gemini/: chroma.sqlite3
apps/backend/chroma_db/hf/: chroma.sqlite3
apps/backend/data/documents/01-general_information/: cat01_accreditation.md  cat01_adventist_identity_spiritual_life.md  cat01_campus_overview.md  cat01_contact_directory.md  cat01_governance_structure.md  cat01_history.md  cat01_hod_dean.md  cat01_mission_vision_values.md  cat01_schools_and_programmes_overview.md
apps/backend/data/documents/02-academics/: cat02_academic_calendar 2025-26.md  cat02_academic_calendar.md  cat02_academic_integrity.md  cat02_academic_policies.md  cat02_assessment_philosophy.md  cat02_curriculum_structure_geds.md  cat02_department_courses_01.md  cat02_department_courses_02.md  cat02_department_courses_GEDS.md  cat02_faculties_and_departments.csv  cat02_grading_system.md  cat02_library_services.md  cat02_programme_requirements.csv
apps/backend/data/documents/03-admissions/: cat03_admissions_faqs.json  cat03_admissions_process_workflow.csv  cat03_direct_entry_admission.md  cat03_postgraduate_admissions.md  cat03_scholarships_financial_aid.md  cat03_transfer_international_admissions.md  cat03_tuition_fees.md  cat03_tuition_fees_cont'd.md  cat03_undergraduate_admission_requirements.md
apps/backend/data/documents/04-campus_life/: cat04_cafeteria_meal_timetable.md  cat04_citizenship_demerit_system.md  cat04_dress_code.md  cat04_halls_of_residence cont'd.md  (+4 more)
apps/backend/migrations/versions/: 1a7333816740_initial_database_build.py
apps/backend/scripts/: db_reset.py  ensure_tables.py
apps/backend/test/: test_auth.py  test_chat.py  test_complaint.py  test_history.py  test_rag.py  test_users.py
(+173 files in other folders)
