[project]
name = "backend"
version = "0.1.0"
description = "Backend implementation for UniPal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".turbo",
    "__pycache__",
    "node_modules",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E203",
    "E501",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.basedpyright]
typeCheckingMode = "basic"
